package org.remoteandroid.internal;

option java_package = "org.remoteandroid.internal";
option java_outer_classname = "Messages";
option optimize_for = LITE_RUNTIME;


enum Type 
{
   PING=0;
   CONNECT=10;
   CONNECT_FOR_DISCOVERING=11;
   CONNECT_FOR_COOKIE=12;
   CONNECT_FOR_PAIRING=13;
   PAIRING_CHALENGE=20;
   TRANSACT_RemoteAndroid=40;
   TRANSACT_Binder=41;
   TRANSACT_Apk=42;
}

message Candidates 
{
	optional int32 			 port 		= 10;
	// Public ip
	repeated fixed32 internetIpv4 		= 21;
	repeated bytes   internetIpv6 		= 22;
	repeated fixed32 intranetIpv4		= 31;
	repeated bytes   intranetIpv6		= 32;
	
	// Wifi id
	optional bytes bssid 				= 40;

	// Bluetooth	
	optional fixed64 bluetoothMac		= 50;
	optional bool bluetoothAnonmymous	= 51;
}

message Identity 
{
	optional bytes uuid 			= 10;
	optional string name 			= 11;
	optional bytes publicKey 		= 12;
	optional int32 version			= 13;
	optional string os				= 14;
	optional int32 capability		= 15;
	optional bool bounded			= 16;

	optional Candidates candidates  = 20;
}
//FIXME: Est-ce necessaire de placer ici ? Plutot dans un autre fichier protobuf pour le srv
message BroadcastMsg
{
	enum Type
	{
		EXPOSE=0;
		CONNECT=1;
	}
	required Type		type		=1;
	required Identity	identity	=3;
}

message Msg 
{
	required Type type 		=1;
	optional int64 threadid	=2;
	optional int64 timeout	=3;

	// Connection
	optional Identity identity 		= 10;
	optional bytes publickey 		= 11;
	optional int64 cookie	 		= 12;
	optional int32 challengestep 	= 13;	
	optional bytes challenge1 		= 14;
	optional bytes challenge2 		= 15;
	
		
	// Pair
	optional int32 feature	   = 20;	
	optional int32 pairingstep = 21;	
		
	// Bind
	optional int32 status	=40; // Accept or refuse invocation
	optional int32 oid 		=41;
	optional int32 cmd 		=42;
	optional bytes data		=43;
	optional int32 flags	=44;
	optional bool rc		=45;
	optional int32 rcInt	=46;
	optional bytes reply	=47;

}

